--- a/env/hybrid-cloud-tool/requirements.txt
+++ b/env/hybrid-cloud-tool/requirements.txt
@@ -1,35 +1,154 @@
+aniso8601==9.0.1
+annotated-types==0.6.0
+ansicon==1.89.0
+anyio==4.3.0
+arrow==1.3.0
+asgiref==3.7.2
 azure-common==1.1.28
 azure-core==1.30.2
 azure-identity==1.17.1
 azure-mgmt-core==1.4.0
 azure-mgmt-resource==23.1.1
-blinker==1.8.2
-boto3==1.34.136
-botocore==1.34.136
-certifi==2024.6.2
+bcrypt==4.1.2
+beautifulsoup4==4.12.3
+binaryornot==0.4.4
+blessed==1.20.0
+blinker==1.6.2
+boto3==1.34.44
+botocore==1.34.44
+bottle==0.12.25
+bottle-websocket==0.2.9
+catalogue==2.0.10
+certifi==2023.7.22
 cffi==1.16.0
+chardet==5.2.0
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
+contexttimer==0.3.3
+contourpy==1.2.1
+cookiecutter==2.6.0
 cryptography==42.0.8
-Flask==3.0.3
-google-cloud==0.34.0
-idna==3.7
+cycler==0.12.1
+decorator==5.1.1
+Django==4.2.7
+django-request==1.6.3
+dnspython==2.4.2
+Eel==0.16.0
+email-validator==2.1.0.post1
+fastapi==0.110.1
+Flask==2.3.3
+Flask-JWT-Extended==4.5.2
+flask-mongoengine==1.0.0
+Flask-RESTful==0.3.10
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.1
+flet==0.22.0
+flet-core==0.22.0
+flet-runtime==0.22.0
+fonttools==4.51.0
+future==1.0.0
+gevent==24.2.1
+gevent-websocket==0.10.1
+gitdb==4.0.11
+GitPython==3.1.43
+greenlet==3.0.1
+h11==0.14.0
+httpcore==1.0.5
+httptools==0.6.1
+httpx==0.27.0
+humanfriendly==10.0
+idna==3.4
+importlib-metadata==6.8.0
 isodate==0.6.1
-itsdangerous==2.2.0
-Jinja2==3.1.4
+itsdangerous==2.1.2
+Jinja2==3.1.2
+jinxed==1.2.1
 jmespath==1.0.1
-MarkupSafe==2.1.5
+joblib==1.3.2
+jsonify==0.5
+kiwisolver==1.4.5
+lemniscat.core==0.2.0
+lemniscat.plugin.azurecli==0.2.4
+markdown-it-py==3.0.0
+MarkupSafe==2.1.3
+matplotlib==3.8.4
+mdurl==0.1.2
+mongoengine==0.27.0
 msal==1.29.0
 msal-extensions==1.2.0
+mutagen==1.47.0
+mvn==0.0.1
+mysql==0.0.3
+mysql-connector-python==8.3.0
+mysqlclient==2.2.4
+nltk==3.8.1
+numpy==1.26.4
+oauthlib==3.2.2
+packaging==23.2
+pandas==2.2.2
+Pillow==10.1.0
+playsoundsimple.py==0.7.0
+plyer==2.1.0
 portalocker==2.10.0
+psutil==5.9.8
 pycparser==2.22
+pydantic==2.7.0
+pydantic_core==2.18.1
+pygame==2.5.2
+PyGetWindow==0.0.9
+Pygments==2.17.2
 PyJWT==2.8.0
-python-dateutil==2.9.0.post0
+pyler==0.2.0
+pymongo==4.6.0
+pynput==1.7.6
+pyodbc==5.1.0
+pyparsing==3.1.2
+pypng==0.20220715.0
+pyreadline3==3.4.1
+PyRect==0.2.0
+python-dateutil==2.8.2
+python-dotenv==1.0.1
+python-slugify==8.0.4
+pytz==2023.3
 pywin32==306
-requests==2.32.3
-s3transfer==0.10.2
+PyYAML==6.0.1
+qrcode==7.4.2
+regex==2023.12.25
+repath==0.9.0
+requests==2.31.0
+rich==13.7.1
+s3transfer==0.10.0
+self==2020.12.3
+setuptools==69.4.0
+signup==0.0.1
 six==1.16.0
-typing_extensions==4.12.2
-urllib3==2.2.2
-Werkzeug==3.0.3
+smmap==5.0.1
+sniffio==1.3.1
+sounddevice==0.4.6
+soundfile==0.12.1
+soupsieve==2.5
+SQLAlchemy==2.0.21
+sqlparse==0.4.4
+srsly==2.4.8
+starlette==0.37.2
+text-unidecode==1.3
+timers==0.9.2
+tqdm==4.66.2
+ttkbootstrap==1.10.1
+types-python-dateutil==2.9.0.20240316
+typing_extensions==4.8.0
+tzdata==2023.3
+tzlocal==5.2
+urllib3==2.0.7
+uvicorn==0.29.0
+watchdog==4.0.0
+watchfiles==0.21.0
+wcwidth==0.2.13
+websockets==12.0
+Werkzeug==2.3.7
+whichcraft==0.6.1
+WTForms==3.1.1
+zipp==3.17.0
+zope.event==5.0
+zope.interface==6.3
